# gh-dir

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
install/: install-linux.sh  install-macos.sh  install-windows.bat  install-windows.ps1
src/: authenticated-fetch.ts  clone-command.ts  download.rs  download.ts  github.rs  index.ts  logger.ts  main.rs  repository-info.ts
